# paper-code

./: .env.example  .gitignore  CHANGELOG.md  DOCUMENTATION_SITE_SUMMARY.md  LICENSE  NPM_PUBLISHING.md  PUBLISHING.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.cursor/plans/: cải_thiện_templates_1ff0d3a6.plan.md
.github/workflows/: publish-npm.yml  publish-pypi.yml
docs/: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  QUICKSTART.md  README.md  api-reference.md  features.md  index.md  package-lock.json  package.json
docs-templates/: .npmignore  README.md  index.js  package.json
docs/ai/: AI_RULES.md
docs/guide/: ai-generation.md  batch-mode.md  cli-usage.md  configuration.md  custom-templates.md  index.md  installation.md  project-types.md  quick-start.md  update-mode.md  web-gui.md
docs/libraries/: index.md  prisma.md  tailwindcss.md
docs/stacks/: index.md
docs/stacks/frontend/: nextjs.md  react.md
src/: ai_service.py  banner.py  config.py  detector.py  generator.py  main.py
src/templates/ai/: AI_CONTEXT.md.j2  AI_RULES.md.j2  AI_WORKFLOWS.md.j2  copilot-instructions.md.j2  cursorrules.j2
src/templates/core/: CHANGELOG.md.j2  CONTRIBUTING.md.j2  DEPLOYMENT.md.j2  LICENSE.j2  README.md.j2  SECURITY.md.j2  TESTING.md.j2  gitignore.j2
src/templates/github/: PULL_REQUEST_TEMPLATE.md.j2  ci.yml.j2
src/templates/libs/: alamofire.md.j2  alembic.md.j2  angular_material.md.j2  aws_provider.md.j2  axios.md.j2  azure_provider.md.j2  celery.md.j2  combine.md.j2  core_data.md.j2  coroutines.md.j2  django_rest_framework.md.j2  docker_compose.md.j2  express.md.j2  fastify.md.j2  gcp_provider.md.j2  gorm.md.j2  health_checks.md.j2  helm.md.j2  hilt.md.j2  i18n.md.j2  ingress.md.j2  jest.md.j2  jetpack_compose.md.j2  kotlinx_serialization.md.j2  kustomize.md.j2  modules.md.j2  mongoose.md.j2  monitoring.md.j2  multi_stage_builds.md.j2  nestjs.md.j2  nextauthjs.md.j2  ngrx.md.j2  nuxt_ui.md.j2  pinia.md.j2  prisma.md.j2  pydantic.md.j2  react_router.md.j2  redis.md.j2  redux_toolkit.md.j2  retrofit.md.j2  (+21 more)
src/templates/stacks/backend/: django_arch.md.j2  django_standards.md.j2  fastapi_arch.md.j2  fastapi_standards.md.j2  go_gin_arch.md.j2  go_gin_standards.md.j2  nodejs_arch.md.j2  nodejs_standards.md.j2
src/templates/stacks/cli/: go_cobra_arch.md.j2  go_cobra_standards.md.j2  python_click_arch.md.j2  (+5 more)
web/: README.md  main.py  requirements.txt  start.py  test_api.py
web/static/: index.html
(+40 files in other folders)
