[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-code"
version = "0.5.0"
description = "Interactive Project Documentation Generator for AI-Native Development"
readme = "README.md"
readme-content-type = "text/markdown"
license = { text = "MIT" }
authors = [
  { name = "Nguyen Minh Giau", email = "minhgiau04041998@gmail.com" },
]
maintainers = [
  { name = "Nguyen Minh Giau", email = "minhgiau04041998@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
keywords = [
    "documentation",
    "generator",
    "ai",
    "cursor",
    "copilot",
    "cli",
    "jinja2",
    "template",
]
dependencies = [
    "setuptools>=80.0.0",
    "typer>=0.9.0",
    "jinja2>=3.1.2",
    "inquirer>=3.1.4",
    "rich>=13.7.0",
    "click>=8.1.7",
    "pyfiglet>=1.0.4",
    "pathlib2>=2.3.7",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "isort>=5.0",
]

[project.scripts]
# Map 'paper-code' command to src/main.py app function
paper-code = "src.main:app"

[project.urls]
Homepage = "https://github.com/minhgiau998/paper-code"
Documentation = "https://paper-code-docs.vercel.app"
Repository = "https://github.com/minhgiau998/paper-code"
Issues = "https://github.com/minhgiau998/paper-code/issues"
Changelog = "https://github.com/minhgiau998/paper-code/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100